--- a/bonus/assets/css/d3Style.css
+++ b/bonus/assets/css/d3Style.css
@@ -1,4 +1,10 @@
-.aText {
+.aXText {
+  font-family: sans-serif;
+  font-size: 16px;
+  text-anchor: middle;
+}
+
+.aYText {
   font-family: sans-serif;
   font-size: 16px;
   text-anchor: middle;
