--- a/bonus/assets/css/d3Style.css
+++ b/bonus/assets/css/d3Style.css
@@ -42,11 +42,13 @@
 }
 
 .chart {
+  position: absolute;
   display: block;
   margin: 0;
 }
 
 .d3-tip {
+  position: absolute;
   padding: 6px;
   font-size: 12px;
   line-height: 1;
@@ -55,6 +57,7 @@
   text-transform: capitalize;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 4px;
+  pointer-events: none;
 }
 
 /* Mobile Rules */
